--- a/styles.css
+++ b/styles.css
@@ -106,8 +106,8 @@ footer {
 /* Paid Course Page Styles */
 .paid-course-content {
     text-align: center;
-	background-color: black;
-	color: white;
+	background-color: silver;
+	color: black;
 }
 
 .popup {
